--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -49,6 +49,11 @@ arb:
       # index: "Évènements"
       # new: "Créer un évènement"
       # show: "évènement %{name} commencé le %{started_at}"
+    animal_group_events:
+      # edit: "Modifier un évènement par lot"
+      # index: "Évènements par lot"
+      # new: "Créer un évènement par lot"
+      # show: "évènement par lot\_: %{name} commencé le %{started_at}"
     animal_groups:
       # edit: "Modifier le lot\_: %{name} "
       # index: "Lots d'animaux"
@@ -64,11 +69,7 @@ arb:
       # index: "Ordonnance"
       # new: "Nouvelle ordonnance"
       # show: "Ordonnance\_: %{name} du \_: %{prescripted_on}"
-    animal_race_natures:
-      # edit: "Modifier le type de race\_: %{name} "
-      # index: "Type de race"
-      # new: "Créer un type de race"
-      # show: "Type de race\_: %{name}"
+    animal_race_natures: #?
     animal_race_types: #?
     animal_races:
       # edit: "Modifier la race\_: %{name} "
@@ -576,7 +577,6 @@ arb:
     # animal_groups: "Lot d'Animaux"
     # animal_posologies: "Posologies"
     # animal_prescriptions: "Ordonnances vétérinaires"
-    # animal_race_natures: "Espèces animales"
     # animal_races: "Races"
     # animal_treatments: "Soins des Animaux"
     # animals: "Animaux"
@@ -736,6 +736,7 @@ arb:
     # add_mobile: "Ajouter un n° de portable"
     add_payment: "اضافة دفعة"
     # add_phone: "Ajouter un n° de téléphone"
+    # add_posology: "Ajouter une posologie"
     # add_quickly_a_line: "Ajouter rapidement une ligne de produit"
     # add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
     # add_treatment: "Ajouter un traitement"
@@ -914,6 +915,7 @@ arb:
     district_create: "اضافة منطقة ادارية" #?
     district_x: "%{name} (%{code})"
     # divide: "Diviser"
+    # document: "Document joint"
     document_natures: "نوع الوثيقة"
     document_template_create: "انشاء نموذج للوثيقة" #?
     document_templates: "نموذج الوثائق"
@@ -1592,6 +1594,7 @@ arb:
     user_create: "اضافة مستخدم جديد" #?
     user_name: "اسم المستخدم"
     user_update: "تعديل معلومات المستخدم"
+    # users: "Compte utilisateur"
     uses: "المادة"
     valid: "الصلاحية"
     validate: "التعديل"
@@ -1903,9 +1906,11 @@ arb:
     # use_entity_codes_for_account_numbers: "Utiliser le code personne pour composer les numéros de compte"
     # various_journal: "Journal des opérations diverses par défaut"
   unroll:
+    animal_events:
+      # all: "{name} - {started_at}"
     animal_prescriptions:
       # all: "N° {prescription_number} du {prescripted_on}"
     animals:
-      # all: "{name} ({sex})"
+      # all: "{name} - {work_number}"
     units:
       # all: "{label} ({name})"
