--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -43,6 +43,11 @@ jpn:
       # index: "Évènements"
       # new: "Créer un évènement"
       # show: "évènement %{name} commencé le %{started_at}"
+    animal_group_events:
+      # edit: "Modifier un évènement par lot"
+      # index: "Évènements par lot"
+      # new: "Créer un évènement par lot"
+      # show: "évènement par lot\_: %{name} commencé le %{started_at}"
     animal_groups:
       # edit: "Modifier le lot\_: %{name} "
       # index: "Lots d'animaux"
@@ -58,11 +63,7 @@ jpn:
       # index: "Ordonnance"
       # new: "Nouvelle ordonnance"
       # show: "Ordonnance\_: %{name} du \_: %{prescripted_on}"
-    animal_race_natures:
-      # edit: "Modifier le type de race\_: %{name} "
-      # index: "Type de race"
-      # new: "Créer un type de race"
-      # show: "Type de race\_: %{name}"
+    animal_race_natures: #?
     animal_race_types: #?
     animal_races:
       # edit: "Modifier la race\_: %{name} "
@@ -540,7 +541,6 @@ jpn:
     # animal_groups: "Lot d'Animaux"
     # animal_posologies: "Posologies"
     # animal_prescriptions: "Ordonnances vétérinaires"
-    # animal_race_natures: "Espèces animales"
     # animal_races: "Races"
     # animal_treatments: "Soins des Animaux"
     # animals: "Animaux"
@@ -699,6 +699,7 @@ jpn:
     # add_mobile: "Ajouter un n° de portable"
     # add_payment: "Ajouter un encaissement"
     # add_phone: "Ajouter un n° de téléphone"
+    # add_posology: "Ajouter une posologie"
     # add_quickly_a_line: "Ajouter rapidement une ligne de produit"
     # add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
     # add_treatment: "Ajouter un traitement"
@@ -861,6 +862,7 @@ jpn:
     display_help: "手伝い"
     # district_x: "%{name} (%{code})"
     # divide: "Diviser"
+    # document: "Document joint"
     # document_natures: "Types de documents"
     # document_templates: "Modèles de documents"
     # dont_use_journal: "-- Ne pas utiliser de journal --"
@@ -1236,7 +1238,7 @@ jpn:
     # print_on: "Le"
     # print_with_template: "Imprimer %{name}"
     # product: "Produit"
-    # product_category: "Catégorie"
+    # product_category: "Produits"
     # product_category_update: "Modifier la catégorie"
     # product_name: "Produit"
     product_tabbox:
@@ -1455,6 +1457,7 @@ jpn:
     # used_accounts: "Comptes utilisés seulement"
     user_name: "ユーザー名"
     # user_update: "Modifier les informations de l’utilisateur"
+    # users: "Compte utilisateur"
     # uses: "Matériel"
     # valid: "Valider"
     # validate: "Valider"
@@ -1713,9 +1716,11 @@ jpn:
     # use_entity_codes_for_account_numbers: "Utiliser le code personne pour composer les numéros de compte"
     # various_journal: "Journal des opérations diverses par défaut"
   unroll:
+    animal_events:
+      # all: "{name} - {started_at}"
     animal_prescriptions:
       # all: "N° {prescription_number} du {prescripted_on}"
     animals:
-      # all: "{name} ({sex})"
+      # all: "{name} - {work_number}"
     units:
       # all: "{label} ({name})"
