--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -3,15 +3,11 @@ jpn:
     attributes:
       animal:
         # race: "Race"
-      animal_group:
-        # age_max: "Age maximum"
-        # age_min: "Age minimum"
-        # pregnant: "Surveillance de la gestation"
+      animal_group: #?
       animal_race:
         # code: "Code race"
       animal_treatment_use:
         # drug_admission_path: "Voie d’admission"
-        # per_animal_unit: " / "
         # quantity_unit: "Unité"
       asset_depreciation:
         # asset_amount: "Valeur nette comptable (VNC)"
@@ -375,7 +371,8 @@ jpn:
     # area_measure: "Superficie"
     # area_unit: "Unité de surface"
     # areas: "Zones postales"
-    # arrived_on: "Arrivé le"
+    # arrival_reasons: "Causes d'entrée"
+    # arrived_on: "Date d'entrée"
     # asset: "Immobilisation"
     # asset_amount: "Valeur nette comptable"
     # asset_depreciations: "Dépréciations d’immobilisation"
@@ -534,6 +531,7 @@ jpn:
     # departed_on: "Parti le"
     # department: "Service"
     # departments: "Services"
+    # departure_reasons: "Causes de sortie"
     # deposit: "Remise en banque"
     # depositable_payments: "Encaissements encaissables"
     # depositables_account: "Compte d’attente pour les encaissements à encaisser"
@@ -570,6 +568,7 @@ jpn:
     # draft_mode: "Mode brouillard"
     # drug: "Médicament"
     # drug_admission_path: "Voie d'admission"
+    # drug_admission_way: "Drug admission way"
     # drug_allowed: "Médicament utilisable sans prescription"
     # drugs: "Médicaments"
     # duration: "Durée"
@@ -618,6 +617,7 @@ jpn:
     # exportable_columns: "Colonnes exportables"
     # expression: "Expression"
     # extension: "Extension"
+    # external: "Externe à l'exploitation"
     # family: "Module"
     # father: "Père"
     # fax: "Fax"
@@ -664,8 +664,6 @@ jpn:
     # in_cash: "En espèce"
     # in_name: "Abréviation incluse dans le nom de la personne"
     # included: "Incluse"
-    # income_on: "Date d'entrée"
-    # income_reasons: "Causes d'entrée"
     # incoming_deliveries: "Livraisons entrantes"
     # incoming_delivery_lines: "Lignes de livraisons entrantes"
     # incoming_delivery_modes: "Modes de livraisons entrantes"
@@ -685,8 +683,6 @@ jpn:
     # invoiced_on: "Facturée le"
     # invoices_count: "Nombre de factures"
     # is_debit: "Débit"
-    # is_external: "Externe à l'exploitation"
-    # is_reproductor: "Reproducteur"
     # item_listing: "Nœud de l’extraction"
     # item_listing_node: "Nœud de l’élément"
     # item_nature: "Nature de l’élément"
@@ -807,8 +803,6 @@ jpn:
     # outgoing_payment_modes: "Modes de décaissement"
     # outgoing_payment_uses: "Parties de décaissements"
     # outgoing_payments: "Décaissements"
-    # outgone_on: "Date de sortie"
-    # outgone_reasons: "Causes de sortie"
     # output_conveyors: "Convoyeur sortant"
     # owner: "Propriétaire"
     # owner_type: "Nature du propriétaire"
@@ -901,6 +895,8 @@ jpn:
     # purchases_account: "Compte comptable de charges"
     # purchases_products: "Produits d’achat"
     # quantity: "Quantité"
+    # quantity_delay: "Pendant"
+    # quantity_interval: "Toutes les"
     # quantity_max: "Quantité maximum"
     # quantity_min: "Quantité minimum"
     # quantity_unit: "Unité de la quantité"
@@ -933,6 +929,7 @@ jpn:
     # reflections: "Reflections"
     # relative_humidity: "Humidité relative"
     # remaining_duration: "Durée d’utilisation prévue (heures)"
+    # reproductor: "Reproducteur"
     # required: "Obligatoire"
     # reservoir: "Réservoir"
     # reservoirs: "Réservoirs"
@@ -1096,28 +1093,23 @@ jpn:
     # with_tracking: "Avec tracabilité"
     # with_transport: "Avec transport"
     # work_center: "Centre d’opération"
-    # working_number: "Numéro de travail"
+    # work_number: "Numéro de travail"
     # zone: "Zone"
   enumerize:
     animal:
-      income_reasons:
+      arrival_reasons:
         # birth: "Naissance"
         # housing: "Pension"
         # other: "Autres"
         # purchase: "Achat"
-      outgone_reasons:
+      departure_reasons:
         # autoconsumption: "Autoconsommation"
         # dead: "Décès"
         # other: "Autres"
         # sale: "Vente"
-    animal_treatment:
-      duration_unit_wait_for_meat:
-        # days: "Jours"
-        # hours: "Heures"
-      duration_unit_wait_for_milk:
-        # days: "Jours"
-        # hours: "Heures"
-        # milking: "Traites"
+      income_reasons: #?
+      outgone_reasons: #?
+    animal_treatment: #?
     asset:
       depreciation_method:
         # graduated: "Dégressive"
