--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -140,6 +140,7 @@ spa:
         # contains_blank_page: "%{attribute} contient une page vide"
         # currency_does_not_match: "La devise de «\_%{attribute}\_» ne correspond pas celle attendue\_: %{currency}"
         # empty: "%{attribute} ne peut pas être vide"
+        # entry_has_been_already_validated: "La pièce a été validée et ne peut plus être modifiée"
         # equal_to: "%{attribute} doit être égal à %{count}"
         # even: "%{attribute} doit être impair"
         # exclusion: "%{attribute} est reservé"
@@ -149,6 +150,7 @@ spa:
         # inclusion: "%{attribute} n’est pas inclus dans la liste"
         # invalid: "%{attribute} est invalide"
         # invalid_at: "%{attribute} est invalide. Erreur près de %{error}"
+        # invalid_syntax: "%{attribute} comporte des erreurs de syntaxe : %{errors}"
         # invalid_token: "%{attribute} est invalide. Symbole inconnu %{error}. Les symboles acceptés sont %{accepted}."
         # less_than: "%{attribute} doit être inférieur à %{count}"
         # less_than_or_equal_to: "%{attribute} doit être inférieur ou égal à %{count}"
@@ -157,7 +159,6 @@ spa:
         # nothing_to_pay: "Il n’y a rien à payer. Si vous voulez enregistrer un acompte, n’oubliez pas de le préciser."
         # odd: "%{attribute} doit être pair"
         # posterior: "La date %{attribute} doit être postérieure à %{to}"
-        # record_has_been_already_validated: "La pièce a été validée et ne peut plus être modifiée"
         # record_invalid: "Validations échouées\_: %{errors}"
         # taken: "%{attribute} a déjà été pris"
         # too_long: "%{attribute} est trop long (%{count} caractères maximum)"
@@ -170,7 +171,7 @@ spa:
               # invalid_date: "La période d’amortissement doit débuter le %{start} ou en début de mois"
         cash:
           # currency_does_not_match: "La monnaie du journal %{journal} est différente de celle de la trésorerie"
-          # unvalid_bban: "Un ou plusieurs éléments du RIB sont incorrects."
+          # unvalid_bban: "La clé ne correspond pas. Un ou plusieurs éléments du RIB sont incorrects."
         custom_field_datum:
           # greater_than: "%{field} est trop grand (%{maximum} maximum)"
           # less_than: "%{field} est trop petit (%{minimum} minimum)"
@@ -188,9 +189,12 @@ spa:
             stopped_on:
               # end_of_month: "%{attribute} doit être une date de fin de mois"
           # overlap: "%{attribute} se trouve sur un exercice existant"
+        incoming_delivery_line:
+          # greater_than_undelivered_quantity: "La quantité de produit %{product} à livrer dépasse la quantité non livrée (%{maximum}%{unit})"
         journal:
           attributes:
             closed_on:
+              # draft_entry_lines: "Des écritures du brouillard sont encore présente avant le %{closed_on}"
               # end_of_month: "%{attribute} doit correspondre à une date de fin de mois (%{closed_on})"
         journal_entry:
           # closed_journal: "Le journal est clôturé au %{closed_on} donc vous ne pouvez plus créer, modifier ou supprimer de pièces jusqu’à cette date-là."
@@ -254,8 +258,6 @@ spa:
       # cash: "Trésorerie"
       # cash_transfer: "Virement interne"
       company: "Compañía"
-      # contact: "Contact"
-      # contact_address: ""
       # cultivation: "Culture"
       # custom_field: "Champ complémentaire"
       # custom_field_choice: "Choix de champ complémentaire"
@@ -355,14 +357,12 @@ spa:
     # address: "Adresse"
     # addresses: "Adresses"
     # admin: "Administrateur système"
-    # age_max: "Age maximum"
-    # age_min: "Age minimum"
     # agency_code: "Code guichet"
     # allocation_account: "Compte de dotation"
     # amount: "Montant"
     # animal: "Animaux"
     # animal_drugs: "Médicaments"
-    # animal_events: "Evenement des animaux"
+    # animal_events: "Évènement des animaux"
     # animal_group: "Lot"
     # animal_race_nature: "Espèce animale"
     # animals: "Animals"
@@ -471,7 +471,6 @@ spa:
     # connected_at: "Connecté le"
     # consumption: "Consommation (litres/heure)"
     # contact: "Adresse"
-    # contacts: "Contacts"
     # conveyors: "Convoyeurs"
     # coordinate: "Coordonnée"
     # corpse_location: "Localisation corporelle"
@@ -503,8 +502,6 @@ spa:
     # datetime_value: "Valeur date/heure"
     # dead_on: "Date de décès"
     # debit: "Débit"
-    # decimal_max: "Intervalle haut"
-    # decimal_min: "Intervalle bas"
     # decimal_value: "Valeur décimale"
     # declared_on: "Déclarée le"
     # default_address: "Coordonnée par défaut"
@@ -521,8 +518,7 @@ spa:
     # deliveries: "Livraisons"
     # deliveries_conditions: "Conditions de Livraison"
     # delivery: "Livraison"
-    # delivery_address: "Delivery address"
-    # delivery_contact: "Adresse pour la livraison"
+    # delivery_address: "Adresse pour la livraison"
     # delivery_lines: "Lignes de livraison"
     # delivery_mail: "Delivery mail"
     # delivery_modes: "Modes de livraison"
@@ -550,7 +546,6 @@ spa:
     # diff_more: "Droits rajoutés"
     # direct_links: "Liens directs"
     # direction: "Type"
-    # direction_label: "Type"
     # discount_rate: "Taux d’escompte"
     # disease: "Maladie"
     # diseases: "Maladies"
@@ -571,10 +566,6 @@ spa:
     # drug_allowed: "Médicament utilisable sans prescription"
     # drugs: "Médicaments"
     # duration: "Durée"
-    # duration_unit_wait_for_meat: "Unité de la durée d'attente (Viande)"
-    # duration_unit_wait_for_milk: "Unité de la durée d'attente (Lait)"
-    # duration_wait_for_meat: "Temps d'attente avant remise en vente (Viande)"
-    # duration_wait_for_milk: "Temps d'attente avant remise en vente (Lait)"
     # ean13: "Code EAN13"
     # email: "Courriel (e-mail)"
     # emails: "Courriels (e-mails)"
@@ -606,7 +597,6 @@ spa:
     # event_natures: "Types d’évènement"
     # events: "Évènements"
     # examinated_at: "Examiné le"
-    # excise: "Numéro d’accises"
     # expense: "Dépense"
     # expense_type: "Type de dépense"
     # expenses: "Dépenses"
@@ -619,7 +609,6 @@ spa:
     # external: "Externe à l'exploitation"
     # family: "Module"
     # father: "Père"
-    # fax: "Fax"
     # faxes: "Fax"
     # filename: "Nom de fichier"
     # filesize: "Taille du fichier"
@@ -706,7 +695,6 @@ spa:
     # last_name: "Nom de famille"
     # last_number: "Dernier numéro"
     # last_year: "Dernière année"
-    # latitude: "Latitude"
     # left_on: "Parti le"
     # length_max: "Nombre de caractères maximum"
     # letter: "Lettre"
@@ -725,7 +713,6 @@ spa:
     # locked: "Verrouillé"
     # log: "Journal d'évènements"
     # loggable: "Peut se connecter"
-    # longitude: "Longitude"
     # lost: "En perte"
     # luminance: "Luminosité"
     # mail: "E-mail"
@@ -835,16 +822,14 @@ spa:
     # per_duration_time_unit: "Per duration time unit"
     # per_frequency_time_unit: "Per frequency time unit"
     # period: "Périodicité"
-    # period_name: "Périodicité"
-    # phone: "Téléphone"
     # phones: "Téléphones"
     # photo: "Photo"
     # physical: "Personne physique"
     # picture: "Photo"
-    # picture_content_type: "Picture content type"
-    # picture_file_name: "Picture file name"
-    # picture_file_size: "Picture file size"
-    # picture_updated_at: "Picture updated at"
+    # picture_content_type: "Format de photo"
+    # picture_file_name: "Nom du fichier photo"
+    # picture_file_size: "Taille du fichier photo"
+    # picture_updated_at: "Fichier photo mis à jour le"
     # planned_at: "Prévu à"
     # planned_depreciations: "Amortissements prévus"
     # planned_on: "Prévu le"
@@ -852,7 +837,6 @@ spa:
     # posologies: "Posologies"
     # postcode: "Code postal"
     # preferences: "Préférences"
-    # pregnant: "Pleine"
     # prescripted: "Sur ordonnance"
     # prescripted_on: "Prescrit le"
     # prescription: "Ordonnance"
@@ -902,14 +886,11 @@ spa:
     # race: "Race"
     # races: "Races"
     # range: "Intervalle"
-    # rate: "Taux de change"
     # reason: "Motif"
     # receipt: "Reçu électronique"
     # received: "Reçue"
     # receiver_amount: "Montant reçu"
     # receiver_cash: "Trésorerie réceptrice"
-    # receiver_currency: "Devise reçue"
-    # receiver_currency_rate: "Taux de la devise reçue"
     # receiver_journal_entry: "Écriture de la réception"
     # reconcilable: "Lettrable"
     # record_value: "Enregistrement"
@@ -919,7 +900,6 @@ spa:
     # reduction: "Ligne de réduction"
     # reduction_origin: "Ligne soumise à réduction"
     # reduction_percentage: "Pourcentage de réduction"
-    # reduction_rate: "Taux de réduction"
     # reduction_submissive: "Soumis à réduction"
     # reductions: "Lignes de réductions"
     # reference_number: "N°Référence"
@@ -975,7 +955,6 @@ spa:
     # source_quantity: "Quantité source"
     # sql_type: "Type SQL"
     # start: "Début"
-    # start_on: "Début le"
     # started_at: "Débuté à"
     # started_on: "Débuté le"
     # started_sec: "Date et heure (en secondes)"
@@ -1019,8 +998,6 @@ spa:
     # taxes: "Taxes"
     # temperature: "Température"
     # template: "Modèle"
-    # text_importance: "Importance"
-    # text_nature: "Type"
     # theoric_quantity: "Quantité théorique"
     # title: "Titre"
     # to: "Pour"
@@ -1081,7 +1058,6 @@ spa:
     # warehouses: "Lieux de stockage"
     # watcher: "Observateur"
     # webpass: "Mot de passe web"
-    # website: "Site web"
     # websites: "Sites web"
     # weight: "Poids (kg)"
     # with_accounting: "Passer en comptabilité"
@@ -1337,8 +1313,7 @@ spa:
       # sales: "Ventes"
     complement: #?
     contact: #?
-    contact_address:
-      # error_modify_contact: "Impossible de modifier un contact"
+    contact_address: #?
     custom_field: #?
     delay:
       # error_unvalid_format_for_expression: "L’expression n’est pas au bon format"
